# omnimobot2

./: README.md  config.sh.in  deploy.txt  make.sh
laserscanner/: CMakeLists.txt  laserscanner.kdev4
laserscanner/.kdev4/: laserscanner.kdev4
laserscanner/include/: CollisionDetection.hpp  CommandGD.hpp  CommandURG04LX.hpp  LSData.hpp  LaserScanner.hpp  SafetyVelocityDesired.hpp
laserscanner/src/: CollisionDetection.cpp  LSData.cpp  LaserScanner.cpp  SafetyVelocityDesired.cpp
laserscanner/test/: CMakeLists.txt  testCalcSaftyVeloDes.cpp  testCollisionsData.cpp  testCommdURG04LX.cpp  testDistanzeStep384.cpp  testLSData.cpp  testLaserScanner.cpp  testNeu.cpp  testScannerDaten.cpp  testSensorVV.cpp
omnimobot/: CMakeLists.txt  omnimobot.kdev4
omnimobot/.kdev4/: omnimobot.kdev4
omnimobot/include/: Math.hpp  Utils.hpp
omnimobot/include/omnimobot/: Counter.hpp  Jacobi.hpp  Joystick.hpp  JoystickThread.hpp  XBoxController.hpp  constants.hpp  types.hpp
omnimobot/include/omnimobot/control/: ControlSystem.hpp  ControlSystemWithJacobi.hpp  ControlSystemWithLaser.hpp  LaserScannerControl.hpp
omnimobot/include/omnimobot/control/block/: AccPhiToAccxy.hpp  AccTipToPhi.hpp  FilterHall.hpp  HallSensorInput.hpp  Homingblock.hpp  I.hpp  InvJacobian.hpp  Jacobian.hpp  KeyboardInput.hpp  LaserScannerblock.hpp  MeasuringDataBlock2.hpp  MeasuringDataBlock3.hpp  MotorModel.hpp  PWMblock.hpp  PendulumControl.hpp  PhiToTip.hpp  RobotControl.hpp  SafetyVeloDesBlock.hpp  TransGtoL.hpp  TransGtoSapostrophe.hpp  TransLtoG.hpp  TransLtoG2.hpp  TransLtoSapostrophe.hpp  TransSapostropheToG.hpp  TransitionLaserData.hpp  VoltageToPWM.hpp  XBoxInput.hpp
omnimobot/include/omnimobot/safety/: OmniSafetyProperties.hpp  OmniSafetyPropertiesWithLaser.hpp  SafetyWithControlJacobiProb.hpp
omnimobot/src/: CMakeLists.txt  CMakeLists_int.txt  Jacobi.cpp  Joystick.cpp  JoystickStart.cpp  JoystickThread.cpp  Math.cpp  StartJoystick.cpp  main.cpp
omnimobot/src/control/: ControlSystem.cpp  ControlSystemWithJacobi.cpp  ControlSystemWithLaser.cpp  HomingControl.cpp  LaserScannerControl.cpp
omnimobot/src/control/block/: AccPhiToAccxy.cpp  AccTipToPhi.cpp  FilterHall.cpp  HallSensorInput.cpp  Homingblock.cpp  InvJacobian.cpp  Jacobian.cpp  KeyboardInput.cpp  LaserScannerblock.cpp  MeasuringDataBlock2.cpp  MeasuringDataBlock3.cpp  MotorModel.cpp  PWMblock.cpp  PendulumControl.cpp  PhiToTip.cpp  RobotControl.cpp  SafetyVeloDesBlock.cpp  TransGtoL.cpp  TransGtoSapostrophe.cpp  TransLtoG.cpp  TransLtoG2.cpp  TransLtoSapostrophe.cpp  TransSapostropheToG.cpp  TransitionLaserData.cpp  VoltageToPWM.cpp  XBoxInput.cpp
omnimobot/src/safety/: OmniSafetyProperties.cpp  OmniSafetyPropertiesWithLaser.cpp  SafetyWithControlJacobiProb.cpp
omnimobot/test/: CMakeLists.txt  ControlsystemDummy.cpp  ControlsystemDummy.hpp  SafetyWithoutControlSystem.cpp  SafetyWithoutControlSystem.hpp  test-AtipToPihiBlock.cpp  test-Axis5.cpp  test-ControlAndSafety.cpp  test-ControlSystem.cpp  test-ControlSystemKartesisch.cpp  test-DigIn.cpp  test-DigInWithSafty.cpp  test-Drives.cpp  test-HallBlock.cpp  test-Hallplot.cpp  test-Hallsensor.cpp  test-Homing.cpp  test-HomingSensorAndEnc.cpp  test-I.cpp  test-Input.cpp  test-InvJacobian.cc  test-Jacobi.cc  test-JoystickThread.cpp  test-Keyboard.cpp  test-Mainboard.cpp  test-Maxon.cpp  test-Nan.cpp  test-RobotControl.cc  test-RunTimeGainMatrix.cpp  test-RunTimeGainVector.cpp  test-SPI.cpp  test-SafetyWithoutControlSystem.cpp  test-Subblock.cpp
omnimobot/test/data/: I-test.txt  inv_jacobian-test.txt
